welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:3: error: ';' expected but 'def' found.
/def isFacingTrail():Boolean = {
 ^