welcome.lessons.welcome.methods.slug.SlugHunting.scala.code

/def isFacingTrail():Boolean = {
var couleur=false
if (!estFaceMur){avance;
getCouleurSol() match {

	case Color.green => couleur=true
	case _ => couleur=false
}
recule();

}else{couleur=false;}
return couleur
}
       

def hunt() {
if (isFacingTrail()==true){avance();}else{recule;}
}

